--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body{
 
 /* header */
 
+header{
+    overflow: hidden;
+}
+
 .header_upper_nav{
     background: url('../img/snow.png') top / cover;
 }
@@ -259,6 +263,7 @@ body{
 main{
     width: 100%;
     background: url('../img/snow.png') fixed;
+    overflow: hidden;
 }
 
 .main_banner{
@@ -329,6 +334,10 @@ main{
     transition: .2s;
     text-align: center;
     cursor: pointer;
+}
+
+.hide{
+    display: none;
 }
 
 .main_block1 div:hover i{
@@ -1698,5 +1707,112 @@ footer{
 
     .header_lower_inside2 label input{
         width: 600px;
+    }
+
+    .main_content_lower{
+        padding: 20px 0;
+    }
+
+    #headingTwo{
+        display: none;
+    }
+}
+
+@media screen and (max-width:646px){
+    
+    .main_content_lower p{
+        font-size: 14px;
+        width: 90%;
+    }
+
+    .header_lower_inside2 label input{
+        width: 580px;
+    }
+
+    .header_mid_inner3{
+        display: none;
+    }
+
+    .hide{
+        display: block;
+        margin-top: 10px;
+        margin-right: 12px;
+        font-size: 23px;
+        color: rgb(73, 73, 73);
+    }
+
+    .hide:hover{
+        color: black;
+    }
+}
+
+@media screen and (max-width:626px){
+
+    .header_lower_inside2 label input{
+        width: 560px;
+    }
+}
+
+@media screen and (max-width:606px){
+
+    .header_lower_inside2 label input{
+        width: 540px;
+    }
+
+    .grid{
+        grid-template: repeat(4, 200px) / repeat(4, 1fr);
+    }
+
+    .main_banner{
+        height:370px;
+    }
+}
+
+@media screen and (max-width:585px){
+
+    .header_lower_inside2 label input{
+        width: 520px;
+    }
+}
+
+@media screen and (max-width:565px){
+
+    .header_lower_inside2 label input{
+        width: 500px;
+    }
+
+    .main_block1 div{
+        width: 100%;
+        margin-bottom: 20px;
+        padding: 30px 0;
+    }
+
+    .gridder1{
+        grid-column: 1 / 5;
+        grid-row: 3 / 4;
+    }
+    
+    .gridder2{
+        grid-column: 1 / 5;
+        grid-row: 1 / 3;
+    }
+    
+    .gridder3{
+        grid-column: 1 / 5;
+        grid-row: 4 / 5;
+    }
+    
+    .gridder4{
+        grid-column: 1 / 5;
+        grid-row: 5 / 6;
+    }
+    
+    .gridder5{
+        grid-column: 1 / 5;
+        grid-row: 6 / 7;
+    }
+
+    .grid{
+        grid-template: repeat(6, 220px) / repeat(4, 1fr);
     }
 }
