--- a/css/style.css
+++ b/css/style.css
@@ -1816,3 +1816,97 @@ footer{
         grid-template: repeat(6, 220px) / repeat(4, 1fr);
     }
 }
+
+@media screen and (max-width:545px){
+
+    .footer_lower_in1 p{
+        font-size: 14px;
+    }
+
+    .footer_lower_in2 img{
+        width: 50px;
+        margin: 0 5px;
+    }
+
+    .header_lower_inside2 label input{
+        width: 480px;
+    }
+
+    .collapse_content .men{
+        width: 100%;
+        margin-bottom: 30px;
+        padding-top: 80px;
+        padding-left: 15px;
+    }
+    
+    .collapse_content{
+        height: 1500px;
+    }
+
+    .block4_inside .inners_4{
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .block4_inside{
+        margin-bottom: 30px;
+    }
+
+    .main_content_lower p{
+        font-size: 13px;
+        width: 100%;
+    }
+
+    .footer_inside{
+        width: 60%;
+        margin: 0 auto;
+        margin-top: 30px;
+        padding-left: 5%;
+    }
+
+    .svas{
+        padding-left: 13%;
+    }
+}
+
+@media screen and (max-width:528px){
+
+    .header_lower_inside2 label input{
+        width: 460px;
+    }
+
+    .middle a{
+        margin: 5px;
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width:512px){
+
+    .middle a{
+        margin: 5px;
+        font-size: 13px;
+    }
+
+    .middle{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width:504px){
+
+    .header_lower_inside2 label input{
+        width: 440px;
+    }
+
+    .block3_inner2 div p{
+        font-size: 17px;
+        margin-top: 5px;
+    }
+
+    .block3_in div h2{
+        font-size: 22px;
+    }
+}
